# Totes-Random

./: .gitignore  Procfile  index.html  keys.sh  readme.md  snap-generated-cabal  stack.yaml  totes-random.cabal  tweet_style.css
new-frontend/: README.md  config.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
new-frontend/src/: index.html
new-frontend/src/css/: style.css
new-frontend/src/ts/: display_tweets.ts  index.ts
src/: GetInfo.hs  Info-template.hs  Main.hs  RandomHandler.hs  TwitSeed.hs
src (copy)/: Main.hs  RandomHandler.hs  TwitSeed.hs
