name:                totes-random
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/totes-random#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TwitSeed
                     , GetInfo
                     , RandomHandler
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , transformers
                     , resourcet
                     , twitter-types-lens
                     , twitter-conduit
                     , text
                     , lens
                     , hashable
                     , random
                     , mersenne-random-pure64
                     , aeson
                     , http-conduit
                     , http-client
                     , http-client-tls
                     , case-insensitive
                     , containers
                     , network-uri
                     , bytestring
  default-language:    Haskell2010

executable totes-random
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , totes-random
                     , aeson
                     , random
                     , mersenne-random-pure64
                     , conduit
                     , transformers
                     , resourcet
                     , twitter-types-lens
                     , twitter-conduit
                     , text
                     , lens
                     , http-conduit
                     , http-client
                     , http-client-tls
                     , hashable
                     , case-insensitive
                     , containers
                     , network-uri
                     , bytestring                >= 0.9.1 && < 0.11
                     , monad-control             >= 1.0   && < 1.1
                     , mtl                       >= 2     && < 3
                     , snap-core                 >= 1.0   && < 1.1
                     , snap-server               >= 1.0   && < 1.1
                     , scotty
